@@ -1,4 +1,11 @@
-20090205
+20090214
+ - (djm) OpenBSD CVS Sync
+   - dtucker@cvs.openbsd.org 2009/02/02 11:15:14
+     [sftp.c]
+     Initialize a few variables to prevent spurious "may be used
+     uninitialized" warnings from newer gcc's.  ok djm@
+
+20090212
  - (djm) [sshpty.c] bz#1419: OSX uses cloning ptys that automagically
    set ownership and modes, so avoid explicitly setting them
  - (djm) [configure.ac loginrec.c] bz#1421: fix lastlog support for OSX.
@@ -5123,5 +5130,5 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5185 2009/02/12 02:12:21 djm Exp $
+$Id: ChangeLog,v 1.5186 2009/02/14 05:26:19 djm Exp $
 
